fix: scrollbar width and design

--- a/src/renderer/app.css
+++ b/src/renderer/app.css
@@ -129,8 +129,8 @@
 
 .xterm .xterm-scrollable-element > .scrollbar {
   display: block !important;
-  width: 4px !important;
-  right: 5px !important;
+  width: 8px !important;
+  right: 0 !important;
   top: 6px !important;
   bottom: 6px !important;
   height: auto !important;
@@ -140,7 +140,7 @@
 
 .xterm .xterm-scrollable-element > .scrollbar > .slider {
   background: var(--takoyaki-terminal-scrollbar-thumb) !important;
-  border-radius: 3px !important;
+  border-radius: 0 !important;
   min-height: 32px !important;
   transition: opacity 60ms linear !important;
 }
